03_code2/grade.txt
Grading at Wed Aug 26 23:51:36 UTC 2020
Checking code2.c for legal syntax
temp.c: In function ‘main’:
temp.c:26:48: error: ‘numsStars’ undeclared (first use in this function)
   printf("That triangle had %d total stars\n", numsStars);
                                                ^
temp.c:26:48: note: each undeclared identifier is reported only once for each function it appears in
The code did not have legal syntax!

Overall Grade: F
